# testing_Packaging_readthedocs

./: README.md  README.rst  mkdocs.yml  pyproject.toml
docs/: about.md  conf.py  index.md  index.rst  requirements.txt
docs/modules/: pinn.md  solvers.md  solvers.rst  utils.md
docs/source/: conf.py  index.rst  modules.rst  requirements.txt  testPackage_JBM.pinn.rst  testPackage_JBM.utils.rst
docs/source/modules/: solvers.rst
site/: 404.html  index.html  search.html
site/about/: index.html
src/: Downloads - Shortcut.lnk
src/testPackageODEsolver/: test_use_sqrt.py
src/testPackageODEsolver/test_ode/: solvers.py  testingSolver.py
src/testPackageODEsolver/test_ode/utils/: model.py  plotters.py
src/testPackage_JBM/: __init__.py  pde_trainingSelect_2var_test.py  solvers.py
src/testPackage_JBM/pinn/: order1pinnClass.py  order1pinnSolver.py
src/testPackage_JBM/test_ode/: order1pinnClass.py
src/testPackage_JBM/test_ode/utils/: points.py
src/testPackage_JBM/utils/: __init__.py  model.py  plotters.py  points.py
testPackage_JBM/: LICENSE
testPackage_JBM/src/testPackageODEsolver/test_math/test_sqrtFunc/: sqrt.py
testPackage_JBM/src/testPackageODEsolver/test_ode/: order1pinnSolver.py
