[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "testPackage_JBM"
version = "0.0.1"
dependencies = [
  "tensorflow",
  "numpy",
  "pyDOE",
  "matplotlib",
]
authors = [
  { name="Jason Matthews"},
]
description = "A small package for readthedocs and packaging for testing"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/JB55Matthews/testing_Packaging_readthedocs"
